<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:diagonal="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutAnimation="@anim/layout_animation_list"
            android:paddingBottom="@dimen/home_title_m_t">

            <com.github.florent37.diagonallayout.DiagonalLayout
                android:id="@+id/profile_diagonalLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                diagonal:diagonal_angle="10"
                diagonal:diagonal_direction="left"
                diagonal:diagonal_position="bottom">

                <ImageView
                    android:id="@+id/profile_background"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:contentDescription="@string/background_profile"
                    android:scaleType="centerCrop"
                    android:src="@drawable/background_profile" />

            </com.github.florent37.diagonallayout.DiagonalLayout>

            <com.github.siyamed.shapeimageview.CircularImageView
                android:id="@+id/profile_img"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_below="@id/profile_diagonalLayout"
                android:layout_marginStart="@dimen/home_title_m_t"
                android:layout_marginLeft="@dimen/home_title_m_t"
                android:layout_marginTop="-56dp"
                android:src="@drawable/gallery_3" />


            <TextView
                android:id="@+id/profile_nama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/profile_img"
                android:layout_marginStart="@dimen/home_title_m_t"
                android:layout_marginLeft="@dimen/home_title_m_t"
                android:layout_marginTop="@dimen/gallery_margin_t"
                android:fontFamily="@font/roboto_bold"
                android:textColor="@color/title"
                android:textSize="@dimen/home_title_t_s" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/profile_diagonalLayout"
                android:layout_marginLeft="@dimen/profile_m_r_l"
                android:layout_marginRight="@dimen/profile_m_r_l"
                android:layout_toEndOf="@id/profile_img"
                android:layout_toRightOf="@id/profile_img"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/profile_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:contentDescription="@string/phone"
                    android:src="@drawable/ic_phone"
                    android:tint="@color/title" />

                <ImageButton
                    android:id="@+id/profile_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:contentDescription="@string/email"
                    android:src="@drawable/ic_email"
                    android:tint="@color/title" />

                <ImageButton
                    android:id="@+id/profile_twitter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:contentDescription="@string/twitter"
                    android:src="@drawable/ic_twitter"
                    android:tint="@color/title" />

            </LinearLayout>


            <TextView
                android:id="@+id/profile_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/profile_nama"
                android:layout_marginStart="@dimen/home_title_m_t"
                android:layout_marginLeft="@dimen/home_title_m_t"
                android:layout_marginTop="@dimen/gallery_margin_t"
                android:layout_marginEnd="@dimen/home_desc_m_l_m_r"
                android:layout_marginRight="@dimen/home_desc_m_l_m_r"
                android:fontFamily="@font/roboto_regular"
                android:textColor="@color/description"
                android:textSize="@dimen/home_desc_t_s" />

            <TextView
                android:id="@+id/profile_kota"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/profile_desc"
                android:layout_marginStart="@dimen/home_title_m_t"
                android:layout_marginLeft="@dimen/home_title_m_t"
                android:layout_marginTop="@dimen/gallery_margin_t"
                android:fontFamily="@font/roboto_light"
                android:textColor="@color/title"
                android:textSize="@dimen/home_desc_t_s" />

            <TextView
                android:id="@+id/profile_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:fontFamily="@font/roboto_bold"
                android:textColor="@color/title"
                android:textSize="18sp"
                android:layout_marginLeft="@dimen/home_title_m_t"
                android:layout_marginTop="@dimen/home_title_m_t"
                android:layout_marginRight="@dimen/home_title_m_t"
                android:layout_below="@id/profile_kota"/>


            <com.google.android.gms.maps.MapView
                android:id="@+id/map"
                android:layout_width="match_parent"
                android:layout_height="@dimen/profile_h"
                android:layout_below="@id/profile_txt"
                android:layout_marginLeft="@dimen/home_title_m_t"
                android:layout_marginTop="@dimen/gallery_margin_t"
                android:layout_marginRight="@dimen/home_title_m_t" />

            <Button
                android:id="@+id/btnDialog"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/map"
                android:layout_marginLeft="@dimen/home_title_m_t"
                android:layout_marginTop="@dimen/gallery_margin_l_r"
                android:layout_marginRight="@dimen/home_title_m_t"
                android:background="@drawable/button_style"
                android:text="@string/version"
                android:textColor="@color/title" />

        </RelativeLayout>


    </ScrollView>

</RelativeLayout>